[metadata]
name = mypythonanywhere
version = 0.1.2-preview
author = immmdreza
author_email = ir310022@gmail.com
description = A python wrapper for the pythonanywhere.com API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/immmdreza/mypythonanywhere
project_urls =
    Bug Tracker = https://github.com/immmdreza/mypythonanywhere/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    aiodns==3.0.0
    aiohttp==3.8.1
    python-dotenv==0.20.0
include-package-data = True

[options.packages.find]
where = src
mypythonanywhere = py.typed
